--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha tests/*/*.test.js",
     "server-dev": "npx nodemon --watch server server/index.js",
     "start": "node server/index.js"
   },
@@ -22,6 +22,7 @@
     "chai": "^4.3.6",
     "eslint-config-airbnb": "^19.0.4",
     "mocha": "^10.0.0",
+    "nodemon": "^2.0.19",
     "supertest": "^6.2.4"
   }
 }
