switched db connection to deployed db

--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
-SERVER_PORT=2525
-DB_HOST=localhost
-DB_PORT=2526
+SERVER_PORT=3000
+PGUSER='ubuntu'
+PGPASSWORD='password'
+PGHOST='aws-instance'
+PGDATABASE='atelier'
+PGPORT=5432
