--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
+    "newrelic": "^9.0.0",
     "pg": "^8.7.3"
   },
   "devDependencies": {
